syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/kinzaz/simple-bank/pb";

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  string access_token_expires_at = 5;
  string refresh_token_expires_at = 6;
}

